kubernetes/platform/shodan-monitor/app/base/apexforge-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apexforge-collector
  namespace: shodan-monitor
  labels:
    app: apexforge-collector
    kustomize.toolkit.fluxcd.io/name: shodan-app
    kustomize.toolkit.fluxcd.io/namespace: flux-system
spec:
  selector:
    app: apexforge-collector
  ports:
    - name: metrics
      port: 8000
      targetPort: 8000
      protocol: TCP
